refactor code in linux
