# app/Http/Controllers/OrderController.php
@@ -18,19 +18,98 @@ class OrderController extends Controller
     public function __construct()
     {
         Configuration::setXenditKey(env('XENDIT_API_KEY'));
-        // dd(env('XENDIT_API_KEY'));
+        // dd(env('XENDIT_API_KEY'));  
+        // dd(env('XENDIT_CALLBACK_TOKEN'));
     }
 
     public function index()
     {
+        // dd(env('XENDIT_CALLBACK_TOKEN'));
+
+        $data = OrderDetails::all();
+
         return response()->json([
-            'message' => 'Welcome to the OrderController',
+            'status' => Response::HTTP_OK,
+            'message' => 'Data retrieved successfully',
+            'data' => $data,
         ]);
     }
 
+    /**
+     * @OA\Post(
+     *     path="/api/invoice",
+     *     summary="Create an invoice",
+     *     tags={"Order"},
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="user_id", type="integer", example=1),
+     *             @OA\Property(property="course_id", type="integer", example=1),
+     *             @OA\Property(property="tax", type="number", format="float", example=0.11),
+     *             @OA\Property(property="service_charge", type="number", format="float", example=10000),
+     *             @OA\Property(property="invoice_url", type="string", example="http://example.com/invoice"),
+     *             @OA\Property(property="status", type="string", example="pending")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=201,
+     *         description="Invoice created successfully",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="status", type="integer", example=201),
+     *             @OA\Property(property="message", type="string", example="Invoice created successfully"),
+     *             @OA\Property(
+     *                 property="data",
+     *                 type="object",
+     *                 @OA\Property(property="external_id", type="string", example="DGID-123456789"),
+     *                 @OA\Property(property="price", type="number", format="float", example=100000),
+     *                 @OA\Property(property="discount", type="number", format="float", example=5000),
+     *                 @OA\Property(property="tax", type="number", format="float", example=11000),
+     *                 @OA\Property(property="service_charge", type="number", format="float", example=10000),
+     *                 @OA\Property(property="total_price", type="number", format="float", example=116000),
+     *                 @OA\Property(property="invoice_url", type="string", example="http://example.com/invoice"),
+     *                 @OA\Property(property="status", type="string", example="pending"),
+     *                 @OA\Property(property="user_id", type="integer", example=1),
+     *                 @OA\Property(property="course_id", type="integer", example=1),
+     *                 @OA\Property(property="no_transaction", type="string", example="DGT-123456789")
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="User or Course not found",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="status", type="integer", example=404),
+     *             @OA\Property(property="message", type="string", example="User not found")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=500,
+     *         description="Failed to create invoice",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="status", type="integer", example=500),
+     *             @OA\Property(property="message", type="string", example="Failed to create invoice"),
+     *             @OA\Property(property="error", type="string", example="Error message")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Invalid input data. Please check your request",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="status", type="integer", example=400),
+     *             @OA\Property(property="message", type="string", example="Invalid input data. Please check your request")
+     *         )
+     *     )
+     * )
+     */
     public function invoice(Request $request)
     {
-        try {
+        try {            
+
             $user = User::find($request->input('user_id'));
             $course = Course::find($request->input('course_id'));
             if (!$user) {
@@ -45,7 +124,7 @@ class OrderController extends Controller
                     'message' => 'Course not found',
                 ], Response::HTTP_NOT_FOUND);
             }
-
+            
             $no_transaction = 'DGT-' . strtoupper(uniqid());
             $external_id = 'DGID-' . strtoupper(uniqid());
             $order = new OrderDetails();
@@ -55,27 +134,27 @@ class OrderController extends Controller
             $order->tax = $request->input('tax', 11 / 100);
             $order->service_charge = $request->input('service_charge', 10000);
             $order->total_price = $order->price + $order->tax + $order->service_charge;
-            $order->invoice_url = $request->input('invoice_url');
-            $order->status = $request->input('status', 'pending');
-            $order->user_id = $request->input('user_id');
-            $order->course_id = $request->input('course_id');
-            $order->no_transaction = $no_transaction;
-
-            $item = new InvoiceItem([
-                'price' => $order->price,
-            ]);
 
             $createInvoice = new CreateInvoiceRequest([
                 'external_id' => $external_id,
                 'payer_email' => User::find($request->input('user_id'))->email,
                 'amount' => $order->total_price,
-                'invoice_duration' => 172800,
-                'items' => [$item],
+                'invoice_duration' => 172800,                
             ]);
 
             $apiInstance = new InvoiceApi();
             $generateInvoice = $apiInstance->createInvoice($createInvoice);
-            $order->invoice_url = $generateInvoice['invoice_url'];
+            $order->invoice_url = $generateInvoice['invoice_url'];  
+            
+            $order->status = $request->input('status', 'pending');
+            $order->user_id = $request->input('user_id');
+            $order->course_id = $request->input('course_id');
+            $order->no_transaction = $no_transaction;                
+
+            $item = new InvoiceItem([
+                'price' => $order->price                
+            ]);
+                 
 
             if ($order->status === 'pending') {
                 Course::find($request->input('course_id'))->decrement('subscriber');
@@ -96,11 +175,17 @@ class OrderController extends Controller
             ], Response::HTTP_INTERNAL_SERVER_ERROR);
         }
     }
-
+    
     public function handleCallback(Request $request)
     {
         $getToken = $request->headers->get('x-callback-token');
         $callbackToken = env('XENDIT_CALLBACK_TOKEN');
+
+        // return response()->json([
+        //     'status' => Response::HTTP_OK,
+        //     'message' => 'Callback handled successfully',
+        //     'data' => $request->all(),
+        // ]);
 
         try {
             $order = OrderDetails::where('external_id', $request->external_id)->first();
